# hfpe

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bot.cc  mock_server.py  sectionlist.cc  sectionlist.h  sectionlist.hpp  shell.nix  utils.h
test/: sectionlist_resp.html  test_sectionlist.cc
